--- a/website/package.json
+++ b/website/package.json
@@ -6,7 +6,7 @@
   },
   "private": true,
   "scripts": {
-    "watch-elm"  : "chokidar './*.elm' -c 'elm-make --debug ./Main.elm --output ./js/elm.js' --initial",
+    "watch-elm"  : "chokidar './*.elm' -c 'elm-make ./Main.elm --output ./js/elm.js' --initial",
     "watch" : "npm run watch-elm",
     "build-elm": "elm-make ./Main.elm --output ./js/elm.js && uglifyjs ./js/elm.js --screw-ie8 -c -m -o ./js/elm.min.js && mv ./js/elm.min.js ./js/elm.js",
     "build": "npm run build-elm"
